# torch-eeg

./: .gitignore  PLAN.md  README.md  REPORT.md  dataloader.py  main.py  models.py  plot_training.py  pyproject.toml  report.typ  visualize.py
notes/: learning-representations-from-eeg.md  rest-eeg-seizure-analysis.md  tsception.md
tests/: test_models.py
